--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-topnav></app-topnav>
+<ngx-spinner></ngx-spinner>
+<div class="container-fluid outlet-container">
+  <router-outlet></router-outlet>
+</div>
