--- a/src/app/blog-post-details/blog-post-details.component.html
+++ b/src/app/blog-post-details/blog-post-details.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<!-- <mat-card>
   <div class="container">
     <div fxLayout="column" class="blog-details">
       <div class="container">
@@ -17,4 +17,34 @@
     </div>
   </div>
 </mat-card>
+ -->
+<app-topnav></app-topnav>
+<section class="post">
+  <article
+    role="article"
+    id="scroll"
+    class="post-content"
+    [innerHTML]="post.data?.body"
+  ></article>
 
+  <section class="author">
+    <div class="details">
+      <img class="logo" src="../../assets/easyops-logo.png" alt="" />
+      <p class="def">Author</p>
+      <h3 class="name">
+        <a itemprop="name" href="{{ post.data?.author.linkedin_url }}"
+          >{{ post.data?.author.first_name }}
+          {{ post.data?.author.last_name }}</a
+        >
+      </h3>
+      <p class="desc">Developer at EasyOps</p>
+      <a class="email" href="mailto:{{ post.data?.author.email }}">{{
+        post.data?.author.email
+      }}</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>EasyOps Blog, {{ this.getYear() }}</p>
+  </footer>
+</section>
