--- a/src/app/blog-post-details/blog-post-details.component.scss
+++ b/src/app/blog-post-details/blog-post-details.component.scss
@@ -1,6 +1,30 @@
-.blog-details {
-  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  img {
-    width: 100%;
+article {
+  border-bottom: 1px solid #f2f2f2;
+}
+.share {
+  *zoom: 1;
+  width: auto;
+  max-width: 800px;
+  float: none;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 0;
+  padding-right: 0;
+  text-align: center;
+  border-top: 1px solid #f2f2f2;
+  padding-top: 1.25rem;
+}
+
+.author {
+  background: #f2f2f2;
+  display: table;
+  width: 100%;
+  padding: 2.5rem 0;
+  margin: 2.5rem 0;
+
+  .logo {
+    width: 180px !important;
+    border-radius: 0;
   }
 }
