--- a/src/app/blog-post-listing/blog-post-listing.component.scss
+++ b/src/app/blog-post-listing/blog-post-listing.component.scss
@@ -1,15 +1,77 @@
-mat-card-title {
-  margin: auto 0;
-  img {
-    margin-right: 1em;
-  }
-  a {
+.post-item {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  text-align: left;
+  padding: 2.5rem 0;
+  border-bottom: 3px solid #f2f2f2;
+  *zoom: 1;
+  width: auto;
+  max-width: 62.5rem;
+  float: none;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+
+  .datetime {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 14.166666666666664%;
+    margin-left: 0%;
+    margin-right: 3%;
+    text-align: center;
     text-decoration: none;
-    color: black;
+
+    .day {
+      font-family: "Open Sans", sans-serif;
+      font-weight: 800;
+      font-style: normal;
+      color: #0562dc;
+      font-size: 5rem;
+      line-height: 1.6;
+    }
+
+    .month-year {
+      color: #000;
+      font-size: 1.125rem;
+    }
   }
 
-  .summary {
-    margin: 1em;
-    font-size: 70%;
+  .content {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 82.83333333333334%;
+    margin-left: 0%;
+
+    .post-title {
+      color: #000;
+      font-size: 2rem;
+      font-family: "Open Sans", sans-serif;
+      font-weight: 800;
+      font-style: normal;
+    }
+
+    .description {
+      color: #333;
+      font-family: "Open Sans", sans-serif;
+      font-weight: 300;
+      font-style: normal;
+      font-size: 1.25rem;
+    }
+
+    .tags a {
+      font-size: 0.875rem;
+      color: #0562dc;
+      display: inline-block;
+      border: 1px solid #0562dc;
+      border-radius: 0.313rem;
+      padding: 0.25rem 0.625rem;
+      margin-right: 0.125rem;
+      margin-bottom: 0.5rem;
+      text-decoration: none;
+    }
   }
 }
