--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <ngx-spinner></ngx-spinner>
-<div class="container-fluid outlet-container">
+<app-sidenav></app-sidenav>
+<div class="outercontainer">
   <router-outlet></router-outlet>
 </div>
