--- a/src/app/blog-post-listing/blog-post-listing.component.html
+++ b/src/app/blog-post-listing/blog-post-listing.component.html
@@ -1,3 +1,8 @@
+<header class="container">
+  <hr/>
+  <h1>Blog Posts</h1>
+  <hr/>
+</header>
 <article class="post-item" *ngFor="let post of posts">
   <a class="datetime">
     <time>
