--- a/src/app/blog-post-details/blog-post-details.component.scss
+++ b/src/app/blog-post-details/blog-post-details.component.scss
@@ -1,30 +1,37 @@
-article {
-  border-bottom: 1px solid #f2f2f2;
-}
-.share {
-  *zoom: 1;
-  width: auto;
-  max-width: 800px;
-  float: none;
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 0;
-  padding-right: 0;
-  text-align: center;
-  border-top: 1px solid #f2f2f2;
-  padding-top: 1.25rem;
-}
+.post {
+  header {
+    text-align: center;
+    margin: 10px;
+  }
+  article {
+    border-bottom: 1px solid #f2f2f2;
+    text-align: left;
+  }
 
-.author {
-  background: #f2f2f2;
-  display: table;
-  width: 100%;
-  padding: 2.5rem 0;
-  margin: 2.5rem 0;
+  .share {
+    *zoom: 1;
+    width: auto;
+    float: none;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 0;
+    padding-right: 0;
+    text-align: center;
+    border-top: 1px solid #f2f2f2;
+    padding-top: 1.25rem;
+  }
 
-  .logo {
-    width: 180px !important;
-    border-radius: 0;
+  .author {
+    background: #f2f2f2;
+    display: table;
+    width: 100%;
+    padding: 2.5rem 0;
+    margin: 2.5rem 0;
+
+    .logo {
+      width: 180px !important;
+      border-radius: 0;
+    }
   }
 }
