--- a/src/app/topnav/topnav.component.scss
+++ b/src/app/topnav/topnav.component.scss
@@ -1,24 +1,4 @@
-$topbar-padding-top: 15px;
-$topbar-padding-right: 20px;
-ul {
-    list-style: none;
-}
-
-li {
-    display: inline;
-    align-items: right;
-    font-size: 12px;
-    cursor: pointer;
-    &::after {
-        content: '|';
-        padding: 5px;
-    }
-    &:last-child::after {
-        content: '';
-    }
-}
-
-.equal_column {
-    display: flex;
-    justify-content: space-between;
+header {
+  margin: 5px;
+  text-align: center;
 }
