--- a/src/app/blog-post-details/blog-post-details.component.html
+++ b/src/app/blog-post-details/blog-post-details.component.html
@@ -35,7 +35,7 @@
 
   <section class="author">
     <div class="details">
-      <img class="logo" src="../../assets/easyops-logo.png" alt="" />
+      <img class="logo" src="./assets/easyops-logo.png" alt="" />
       <p class="def">Author</p>
       <h3 class="name">
         <a itemprop="name" href="{{ post.data?.author.linkedin_url }}"
