--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
     <p>Hopefully this has helped you to gain some interest in the project. Feel free to look around!</p>
     <section class="author">
       <div class="details">
-        <img class="logo" src="../../assets/easyops-logo.png" alt="" />
+        <img class="logo" src="./assets/easyops-logo.png" alt="" />
         <p class="def">Author</p>
         <h3 class="name">
           <a itemprop="name" href="https://www.linkedin.com/in/alan-jachimczak-212697166/"
