added attribution to ButterCMS

--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -6,16 +6,33 @@
           EasyOps
         </a>
       </h1>
-      <p class="lead">EasyOps is a PRJ400 project based around multi-cloud deployments using a simple to use DSL which follows natural language conventions to allow ease of deployment with IaS solutions.</p>
+      <p class="lead">
+        EasyOps is a PRJ400 project based around multi-cloud deployments using a
+        simple to use DSL which follows natural language conventions to allow
+        ease of deployment with IaS solutions.
+      </p>
     </div>
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item active" [routerLink]="['home']">Home</a>
       <a class="sidebar-nav-item active" [routerLink]="['blog']">Blog</a>
-      <a class="sidebar-nav-item" href="https://github.com/alanj1998" target="_blank">GitHub</a>
+      <a
+        class="sidebar-nav-item"
+        href="https://github.com/alanj1998"
+        target="_blank"
+        >GitHub</a
+      >
       <span class="sidebar-nav-item">Currently v0.1.0</span>
     </nav>
 
-    <p>© {{this.getYear()}}. All rights reserved.</p>
+    <p>© {{ this.getYear() }}. All rights reserved.</p>
+    <hr />
+    <h4>Powered by</h4>
+    <a href=" https://buttercms.com">
+      <img
+        src="https://cdn.buttercms.com/RyJ7UhcVTCRqrCFXwgCo"
+        class="butterlogo"
+        alt="buttercms-logo"
+      />
+    </a>
   </div>
-
 </div>
