--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -6,9 +6,9 @@
   width: 300px;
   text-align: left;
   padding: 2rem 1rem;
-  color: rgba(255,255,255,.5);
+  color: rgba(255, 255, 255, 0.5);
   background-color: #202020;
-  color: rgba(255,255,255,.5);
+  color: rgba(255, 255, 255, 0.5);
 
   .sidebar-sticky {
     position: absolute;
@@ -48,6 +48,14 @@
       a {
         text-decoration: none;
       }
+    }
+  }
+
+  a {
+    .butterlogo {
+      width: 100%;
+      position: relative;
+      display: block;
     }
   }
 }
